fix alignment

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,13 @@ body, html {
     font-family: 'Arial', sans-serif;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .header {
     text-align: center;
     margin-bottom: 20px;
@@ -18,7 +25,6 @@ body, html {
 h1 {
     color: #fff;
     margin-bottom: 10px;
-    text-align: center;
 }
 
 #info-btn, #request-permission {
@@ -36,7 +42,7 @@ h1 {
     background-color: #1976d2;
 }
 
-#info-btn {
+/* #info-btn {
     position: absolute;
     top: 20px;
     left: 20px;
@@ -47,11 +53,11 @@ h1 {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.2s;
-}
+} */
 
-#info-btn:hover {
+/* #info-btn:hover {
     background-color: #1976d2;
-}
+} */
 
 .popup {
     display: none;
